; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/gcc/extr_tree-ssa-alias-warnings.c_maybe_add_match.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/gcc/extr_tree-ssa-alias-warnings.c_maybe_add_match.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.tree_map = type { i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, %struct.tree_map*)* @maybe_add_match to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @maybe_add_match(i32 %0, %struct.tree_map* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.tree_map*, align 8
  %5 = alloca %struct.tree_map*, align 8
  store i32 %0, i32* %3, align 4
  store %struct.tree_map* %1, %struct.tree_map** %4, align 8
  %6 = load i32, i32* %3, align 4
  %7 = load %struct.tree_map*, %struct.tree_map** %4, align 8
  %8 = call %struct.tree_map* @htab_find(i32 %6, %struct.tree_map* %7)
  store %struct.tree_map* %8, %struct.tree_map** %5, align 8
  %9 = load %struct.tree_map*, %struct.tree_map** %5, align 8
  %10 = icmp ne %struct.tree_map* %9, null
  br i1 %10, label %11, label %22

11:                                               ; preds = %2
  %12 = load %struct.tree_map*, %struct.tree_map** %5, align 8
  %13 = getelementptr inbounds %struct.tree_map, %struct.tree_map* %12, i32 0, i32 0
  %14 = load i64, i64* %13, align 8
  %15 = icmp ne i64 %14, 0
  br i1 %15, label %22, label %16

16:                                               ; preds = %11
  %17 = load %struct.tree_map*, %struct.tree_map** %4, align 8
  %18 = getelementptr inbounds %struct.tree_map, %struct.tree_map* %17, i32 0, i32 0
  %19 = load i64, i64* %18, align 8
  %20 = load %struct.tree_map*, %struct.tree_map** %5, align 8
  %21 = getelementptr inbounds %struct.tree_map, %struct.tree_map* %20, i32 0, i32 0
  store i64 %19, i64* %21, align 8
  br label %22

22:                                               ; preds = %16, %11, %2
  ret void
}

declare dso_local %struct.tree_map* @htab_find(i32, %struct.tree_map*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
